src/Components/Notifications/index.css
.notifications-container {
    height: 100vh;
    padding: 85px 70px 0 70px;
}

.filter-icon {
    height: 100px;
    width: 100px;
}

.filter-col {
    display: flex;
    padding: 0;
    align-items: baseline;
    padding: 0 0 0 13em;
}

.page-heading {
    display: flex;
    align-items: center;
    text-align: left;
    font-style: normal;
    font-weight: 700;
    font-size: 30px;
    line-height: 41px;

}

.notification-list {
    background: #FFFFFF;
    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
    border-radius: 5px;
}

.notify-list-item {
    display: flex;
    padding: 45px 0 45px 0;
    border-bottom: 1px solid #D4D2D0;
}

.bell-icon {
    flex: .2;
}

.icon img {
    height: 68px;
    width: 68px;
    ;
}

.notification-description {
    flex: .6;
    text-align: left;
}

.notification-description span {
    font-style: normal;
    font-weight: 400;
    font-size: 28px;
    line-height: 38px;
}

.notification-description .time {
    font-style: normal;
    font-weight: 400;
    font-size: 24px;
    line-height: 33px;
    
}

.notification-read {
    flex: .2;
    justify-content: flex-end;


}

